--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     height: 664px;
     border-radius: 30px;
     margin-left: 5px;
+    margin-bottom: 100px;
 }
 
 .text-side {
@@ -37,5 +38,75 @@ body {
 #head-img {
     height: 581px;
     width: 613px;
+}
 
+/* header design ended */
+
+/* main body design started     */
+
+.main-sec {
+    display: flex;
+    justify-content: space-around;
+}
+
+.menu {
+    background-color: black;
+    display: grid;
+    grid-template-rows: 3;
+    align-items: center;
+    justify-content: center;
+    height: 312px;
+    width: 312px;
+    border-radius: 10px;
+
+}
+
+.menu-item {
+    color: black;
+    background-color: white;
+    text-decoration: none;
+    height: 64px;
+    width: 252px;
+    margin: 5px;
+    border-radius: 10px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.blog-img {
+    height: 362px;
+    width: 312px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+}
+
+.image-icons {
+    display: flex;
+    align-items: center;
+}
+
+.blog-img-btn {
+    background-color: white;
+    border: 1px solid black;
+    margin: 5px 10px;
+    padding: 5px 10px;
+
+}
+
+.blog-img-text {
+    margin-left: 17px;
+}
+
+.icons {
+    height: 24px;
+    width: 24px;
+    margin: 10px;
+}
+
+.blog-items {
+    display: grid;
+    grid-template-columns: repeat(3, 312px);
+    gap: 30px;
 }
