responsive for tab

--- a/css/second-style.css
+++ b/css/second-style.css
@@ -13,3 +13,24 @@
 .upcoming-text {
     text-align: center;
 }
+
+/* responsiveness for tab.. */
+@media screen and (max-width:820px) {
+    .main-sec {
+        display: grid;
+        grid-template-columns: repeat(1, 300px);
+
+        width: 100%;
+        justify-items: center;
+    }
+
+    .blog-items {
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: repeat(2, 300px);
+    }
+
+    #blog-btn {
+        visibility: visible;
+    }
+}
