--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     grid-template-columns: repeat(2, 50%);
     align-items: flex-end;
     background-color: black;
-    width: 1321px;
+    width: 100%;
     height: 664px;
     border-radius: 30px;
     margin-left: 5px;
@@ -113,6 +113,11 @@ body {
     gap: 30px;
 }
 
+#blog-btn {
+    margin-top: 50px;
+    visibility: hidden;
+}
+
 /* footer section */
 .footer {
     height: 344px;
@@ -150,4 +155,56 @@ hr {
     justify-content: space-evenly;
 
     margin-top: 100px;
+}
+
+/* responsiveness for tab.. */
+@media screen and (max-width:820px) {
+    .header-div {
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+        align-items: flex-end;
+        background-color: black;
+        width: 100%;
+    }
+
+    .header-div {
+        width: 820px;
+        height: 398px;
+    }
+
+    #heading {
+        color: white;
+        font-size: 20px;
+
+    }
+
+    .text-side {
+        margin: 20px;
+    }
+
+    #head-img {
+        height: 340px;
+        width: 323px;
+    }
+
+    .main-sec {
+        display: grid;
+        grid-template-columns: repeat(1, 300px);
+        justify-items: center;
+        width: 100%;
+    }
+
+    .blog-items {
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: repeat(2, 300px);
+    }
+
+    #blog-btn {
+        visibility: visible;
+    }
+
+    hr {
+        width: 780px;
+    }
 }
